--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,19 @@
 
+machine:
+  services:
+    - docker
+
 dependencies:
   override:
-    - mkdir -p ~/.go_project/src/github.com/${CIRCLE_PROJECT_USERNAME}
-    - ln -s ${HOME}/${CIRCLE_PROJECT_REPONAME} ${HOME}/.go_project/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
-    - go get -t -d -v ./...
-    - go build -v
+		- mkdir -p ~/.go_project/src/github.com/${CIRCLE_PROJECT_USERNAME}
+		- ln -s ${HOME}/${CIRCLE_PROJECT_REPONAME} ${HOME}/.go_project/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
+		- go get -t -d -v ./...
+		- go build -v
+    - docker info
+    - docker build --rm=false -t rnzaws/hello-ci-test .
 
-
+test:
+  override:
+    - docker run -d -p 8080:8080 rnzaws/hello-ci-test; sleep 10
+    - curl --retry 10 --retry-delay 5 -v http://localhost:8080
 
