--- a/circle.yml
+++ b/circle.yml
@@ -18,7 +18,7 @@ dependencies:
     - docker build --rm=false -t rnzaws/hello-ci-test .
     - $(aws ecr get-login --region us-east-1)
     - docker images
-    - docker tag rnzaws/hello-ci-test 702786411213.dkr.ecr.us-east-1.amazonaws.com/test:latest
+    - docker tag rnzaws/hello-ci-test:latest 702786411213.dkr.ecr.us-east-1.amazonaws.com/test:latest
     - docker push 702786411213.dkr.ecr.us-east-1.amazonaws.com/test:latest
 
 test:
